...
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inches2" />

    <EditText
        android:id="@+id/textView2"
        android:layout_width="250dp"
        android:layout_height="49dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingLeft="10dp"
        android:textSize="20dp"
...
        android:layout_marginStart="58dp"
        android:layout_marginTop="20dp"
        android:ems="3"
        android:text="Starting Location:"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/heightInfo2"
        android:layout_width="270dp"
        android:layout_height="42dp"
        android:layout_marginStart="36dp"
...
        android:text="Walk Name:"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightInfo2" />

    <Button
        android:id="@+id/save"
        android:layout_width="118dp"
        android:layout_height="61dp"
        android:layout_marginBottom="36dp"
        android:text="SAVE"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
...
