...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Time:"
        android:textColor="#FFFFFF"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="@+id/startLoc"
        app:layout_constraintTop_toBottomOf="@+id/PWloc" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
